<resources>
    <string name="app_name" translatable="false">Healably</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter your email</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="name">Name</string>
    <string name="name_hint">Enter your name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="date_of_birth_hint">Pick your date of birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="invalid_data">Invalid Data</string>
    <string name="correct_fields">Correct the following fields:</string>
    <string name="cannot_be_empty">Can not be empty</string>
    <string name="cannot_contain_digits">Can not contain digits</string>
    <string name="must_be_valid_address">Must be a valid address</string>
    <string name="password_requirements">Must have between 8 and 14 characters and contain at least one uppercase, one lowercase, one digit and one symbol</string>
    <string name="success">Success</string>
    <string name="signedup_successfully">Signed up successfully</string>
    <string name="body_structure">Body Structure</string>
    <string name="blood_sugar">Blood Sugar</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="reports">Reports</string>
    <string name="hello">Hello, </string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="logged_in_successfully">Logged In Successfully</string>
    <string name="error">An error occurred</string>
    <string name="user_already_exists">A user with the provided email already exists</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="abdominal_perimeter">Abdominal Perimeter</string>
    <string name="no_data_available">No data available</string>
    <string name="add_value">Add Value</string>
    <string name="bmi">BMI</string>
    <string name="date">Date</string>
    <string name="value">Value</string>
    <string name="kg_m2" translatable="false">Kg/m<sup>2</sup></string>
    <string name="kg" translatable="false">Kg</string>
    <string name="cm" translatable="false">cm</string>
    <string name="m" translatable="false">m</string>
    <string name="mg_dl" translatable="false">mg/dL</string>
    <string name="mm_hg" translatable="false">mm Hg</string>
    <string name="bpm" translatable="false">bpm</string>
    <string name="last_measurement">Last Measurement</string>
    <string name="hba1c" translatable="false">HbA1c</string>
    <string name="approximated_hba1c">&#x2139; The HbA1c value is on an approximated value. To know the exact value, please do de recommended blood test</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="value_hint">Enter a value</string>
    <string name="value_type">Value Type</string>
    <string name="sys_bp">Systolic Blood Pressure</string>
    <string name="dia_bp">Diastolic Blood Pressure</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="result">Result</string>
    <string name="delete_value">Delete Value</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirmation">Confirmation</string>
    <string name="delete_account_confirmation">Do you really want to delete your account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="b_struct">B. Struct.</string>
    <string name="bl_sug">Bl. Sug.</string>
    <string name="bl_press">Bl. Press.</string>
    <string name="password_equals">Password cannot be the same as the old password!</string>

    <!--REPORT STRINGS-->
    <!--BMI-->
    <string name="low_bmi">Low BMI</string>
    <string name="low_bmi_description">
        Your BMI is on a low value, which means that your weight is below the recommended for your height.
        This can weaken your immune system and lead yo illnesses.
        You should see your doctor or nutritionist to gain weight.
    </string>
    <string name="normal_bmi">Normal BMI</string>
    <string name="normal_bmi_description">
        Your BMI is on a normal value, which means that you are on a normal weight for your height.
        You can keep your eating habits and maintain a regular practice of physical exercise.
    </string>
    <string name="high_bmi">High BMI</string>
    <string name="high_bmi_description">
        Your BMI is on a high value, which means that your weight is above the recommended for your height.
        This increases the risk for cardiovascular diseases.
        You should see your doctor or nutritionist to lose weight.
    </string>

    <string name="normal_ap">Normal Abdominal Perimeter</string>
    <string name="normal_ap_description">
        Your Abdominal Perimeter is on a normal value, which means you have <b>low</b> risk of getting cardiovascular
        diseases, such as diabetes type II, high cholesterol and hypertension.
    </string>
    <string name="augmented_ap">Augmented Abdominal Perimeter</string>
    <string name="augmented_ap_description">
        Your Abdominal Perimeter is on an augmented value, which means you have <b>intermediate</b> risk of getting cardiovascular
        diseases, such as diabetes type II, high cholesterol and hypertension.
        You should watch your eating habits and maintain a regular practice of physical exercise to lower your Abdominal Perimeter.
    </string>
    <string name="high_ap">High Abdominal Perimeter</string>
    <string name="high_ap_description">
        Your Abdominal Perimeter is on an high value, which means you have <b>high</b> risk of getting cardiovascular
        diseases, such as diabetes type II, high cholesterol and hypertension.
        This is a concerning value, so you should see your doctor to improve your health.
    </string>
    <string name="neutral_ap_description">
        The Abdominal Perimeter values vary according to gender.
        In Males the interval is 94-102cm and in Femaled the interval is 80-88cm.
        Please, contact your doctor for more info about your Abdominal Perimeter.
    </string>

    <string name="low_bs">Low Blood Sugar</string>
    <string name="low_bs_description">
        Your Blood Sugar average is on a low value, which means that the glucose in your blood is being on a <b>low</b> level
        for the previous 2 to 3 months.
        You should see your doctor or nutritionist to increase your Blood Sugar, so you can gain more energy.
    </string>
    <string name="normal_bs">Normal Blood Sugar</string>
    <string name="normal_bs_description">
        Your Blood Sugar average is on a normal value, which means that the glucose in your blood is being on a <b>good</b> level
        for the previous 2 to 3 months.
    </string>
    <string name="high_bs">High Blood Sugar</string>
    <string name="high_bs_description">
        Your Blood Sugar average is on a high value, which means that the glucose in your blood is being on a <b>high</b> level
        for the previous 2 to 3 months.
        You should see your doctor, because this might indicate that you have Diabetes.
        If you are already diagnosed with Diabetes, maintain the recommendations of your doctor, as well as a regular practice of physical exercise.
    </string>

    <string name="low_bp">Low Blood Pressure</string>
    <string name="low_bp_description">
        Your Blood Pressure is on a low value, which means that your blood is circulating exerting little pressure.
        This causes low irrigation on your body, which can lead to Dizziness, Weakness and Stroke.
        You should see your doctor to increase your Blood Pressure.
    </string>
    <string name="normal_bp">Normal Blood Pressure</string>
    <string name="normal_bp_description">
        Your Blood Pressure is on a normal value, which means that your blood is circulating exerting the necessary pressure.
        You have <b>low</b> risk of suffering a Stroke.
        You can keep your heating habits and maintain a regular practice of physical exercise.
    </string>
    <string name="high_bp">High Blood Pressure</string>
    <string name="high_bp_description">
        Your Blood Pressure is on a high value, which means that your blood is circulating exerting exaggerated pressure.
        This causes the heart to work harder, i.e you have <b>high</b> risk of suffering a Stroke.
        You should see your doctor to decrease your Blood Pressure.
    </string>

    <string name="low_hr">Low Heart Rate</string>
    <string name="low_hr_description">
        Your Heart Rate is on a low value, which means that your heart is <b>not pumping enough</b> for your body.
        This can lead to <b>death</b>.
        You should see your doctor to increase your Heart Rate.
    </string>
    <string name="normal_hr">Normal Heart Rate</string>
    <string name="normal_hr_description">
        Your Heart Rate is on a normal value, which means that your heart <b>is pumping enough</b> for your body.
        You can keep your heating habits and maintain a regular practice of physical exercise.
    </string>
    <string name="high_hr">High Heart Rate</string>
    <string name="high_hr_description">
        Your Heart Rate is on a high value, which means that your heart is <b>pumping harder</b> than the recommended for your body.
        This can lead yo Hypertension, which is a risk factor for cardiovascular diseases.
        You should see your doctor to control your Heart Rate.
    </string>
    <string name="extreme_hr">Extremely High Heart Rate</string>
    <string name="extreme_hr_description">
        Your Heart Rate is on an extremely high value, which means that your heart is pumping <b>way too harder</b> than the recommended for your body.
        You have <b>extreme</b> high risk of suffering a Heart Attack, so call 911 <b>IMMEDIATELY</b>.
    </string>
</resources>