<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gunmetal"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/name"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/name_hint"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/gender"
        android:textSize="20sp"/>

    <RadioGroup
        android:id="@+id/profile_rg_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/profile_rb_male"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text="@string/male"
            android:layout_marginEnd="10dp"/>
        <RadioButton
            android:id="@+id/profile_rb_female"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text="@string/female"
            android:layout_marginEnd="10dp"/>
        <RadioButton
            android:id="@+id/profile_rb_other"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text="@string/other"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/date_of_birth"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edit_date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/date_of_birth_hint"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/email"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/email_hint"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/password"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/password_hint"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPassword" />
</LinearLayout>