<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gunmetal"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/value_type"
        android:textSize="20sp"/>

    <RadioGroup
        android:id="@+id/rg_valueType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_weight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text="@string/weight"
            android:layout_marginEnd="10dp"/>
        <RadioButton
            android:id="@+id/rb_height"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text="@string/height"
            android:layout_marginEnd="10dp"/>
        <RadioButton
            android:id="@+id/rb_abdominal_perimeter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text="@string/abdominal_perimeter"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/value"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/bodyStructure_edit_value"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/value_hint"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="numberDecimal" />
</LinearLayout>