<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accounts.views.SignupActivity"
    android:orientation="vertical"
    android:background="@color/gunmetal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textSize="46sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/signup_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/name_hint"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="20sp"
            android:layout_marginTop="40dp"/>

        <RadioGroup
            android:id="@+id/signup_rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/white"
                android:layout_marginEnd="15dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/white"
                android:layout_marginEnd="15dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textColor="@color/white"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textSize="20sp"
            android:layout_marginTop="40dp"/>

        <EditText
            android:id="@+id/signup_edit_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/date_of_birth_hint"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="text"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:layout_marginTop="40dp"/>

        <EditText
            android:id="@+id/signup_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/email_hint"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:layout_marginTop="40dp"/>

        <EditText
            android:id="@+id/signup_edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/passsword_hint"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:background="@drawable/edit_text_border"
            android:textColor="@color/white"
            android:inputType="textPassword"/>

        <RelativeLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/signup_bt_signup"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:backgroundTint="@color/metallic_seaweed"
                android:text="@string/signup"
                android:textColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>