<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accounts.views.LoginActivity"
    android:orientation="vertical"
    android:background="@color/gunmetal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="46sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:layout_marginTop="100dp"/>

        <EditText
            android:id="@+id/login_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/email_hint"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/login_edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/passsword_hint"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:background="@drawable/edit_text_border"
            android:textColor="@color/white"
            android:inputType="textPassword"/>



        <RelativeLayout
            android:layout_marginTop="140dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/login_bt_signup"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/metallic_seaweed"
                android:text="@string/signup"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/login_bt_login"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/metallic_seaweed"
                android:textColor="@color/white"
                android:layout_alignParentEnd="true"
                android:text="@string/login" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>