<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_Weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black_coral"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/report_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/report_date_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/report_title"
                app:layout_constraintEnd_toStartOf="@id/report_value_lbl"/>

            <TextView
                android:id="@+id/report_value_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/report_date_lbl"
                app:layout_constraintTop_toTopOf="@id/report_date_lbl"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/report_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10/02/2023"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/report_date_lbl"
                app:layout_constraintEnd_toEndOf="@id/report_date_lbl"
                app:layout_constraintTop_toBottomOf="@id/report_date_lbl"
                />

            <TextView
                android:id="@+id/report_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="60kg"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/report_value_lbl"
                app:layout_constraintEnd_toEndOf="@id/report_value_lbl"
                app:layout_constraintTop_toBottomOf="@id/report_value_lbl"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>